restyling resetting password pages (#24)

--- a/quizapp/main_app/templates/password_reset_confirm.html
+++ b/quizapp/main_app/templates/password_reset_confirm.html
@@ -1,40 +1,76 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
- <form action="." method="post">
-    <form action="http://dpaste.com/" name="pasteform" id="pasteform" method="post">
-  {%csrf_token%} 
-  {{form.as_p}}
-  <div id="pastebinTraceback" class="pastebin">
-    <input type="hidden" name="language" value="PythonConsole">
-    <input type="hidden" name="title"
-      value="TemplateDoesNotExist at /reset/MQ/set-password/">
-    <input type="hidden" name="source" value="Django Dpaste Agent">
-    <input type="hidden" name="poster" value="Django">
-    <textarea name="content" id="traceback_area" cols="140" rows="25"> -->
+ <head>
+   <style>
+     .reset_password_c_form_wrapper {
+      width: 100%;
+      height: 100vh;
+      background-color: rgb(253, 232, 252);
+    }
+    .reset_password_c_form {
+      width: 400px;
+      height: 250px;
+      border-radius: 20px;
+      margin: 0 auto;
 
-  <!-- <div class="main">
-    <input  class="un "type="hidden" name="language" value="PythonConsole">
-    <input  class="un "type="hidden" name="title"
-      value="TemplateDoesNotExist at /reset/MQ/set-password/">
-    <input type="hidden" name="source" value="Django Dpaste Agent">
-    <input type="hidden" name="poster" value="Django">
-    <textarea name="content" id="traceback_area" cols="140" rows="25"> -->
-    <!-- <p class="sign" align="center">Enter new password</p>
-    <p class="sign" align="center">Please enter your new password twice so we can verify you typed it in correctly.</p>
-    <p><label for="id_email" ></label>
-    <input type="email"  class="un "name="email" autocomplete="email" maxlength="254" required id="id_email"placeholder="Email">
-  </p>
-    <button type="Submit" align="center" class="submit"value="Sende-mail">Send Email</button> -->
-  <!-- </div>
-</form>
-{% endblock %} --> 
-
-<!-- <form action="http://dpaste.com/" name="pasteform" id="pasteform" method="post">
-
-    <div id="pastebinTraceback" class="pastebin">
-      <input type="hidden" name="language" value="PythonConsole">
-      <input type="hidden" name="title"
-        value="TemplateDoesNotExist at /reset/MQ/set-password/">
-      <input type="hidden" name="source" value="Django Dpaste Agent">
-      <input type="hidden" name="poster" value="Django">
-      <textarea name="content" id="traceback_area" cols="140" rows="25"> -->
+      padding-top: 20px;
+      box-shadow: 5px 5px 10px #ddd;
+      background-color: white;
+      padding: 15px 25px;
+    }
+    .reset_password_c_form input {
+      width: 90%;
+      display: block;
+      border: 1px solid rgb(255, 140, 197);
+      border-radius: 40px;
+      padding: 3px 10px;
+      margin-bottom: 7px;
+      outline: none;
+    }
+    .reset_password_c_form label {
+      margin-bottom: 5px;
+      font-size: 13px;
+    }
+    .reset_password_c_form input:focus {
+      width: 100%;
+      outline: none;
+      transition: all 0.3s ease;
+    }
+    .pr_btn {
+      padding: 6px 10px;
+      outline: none;
+      background: linear-gradient(to right, #9933ff 0%, #ff00ff 100%);
+      border-radius: 40px;
+      border: none;
+      font-weight: 700;
+      margin-top: 10px;
+      color: white;
+      font-size: 14px;
+    }
+   </style>
+ </head>
+<div class="reset_password_c_form_wrapper">
+  <div class="p-5"></div>
+  <div class="reset_password_c_form">
+    <p
+      style="margin-bottom: 10px; font-weight: 500; color: rgb(245, 82, 245)"
+    >
+      Please Enter Your Password Twice
+    </p>
+    <form  action="." method="post">
+    {%csrf_token%} 
+    {{form.as_p}}
+      <div>
+        <label for="password">New Password</label>
+        <input id="password" name="password" type="password"   maxlength="254" required />
+      </div>
+      <div>
+        <label for="password2">Confirm Password</label>
+        <input id="password2" name="password2" type="password"   maxlength="254" required  />
+      </div>
+      
+      <button class="pr_btn" type="submit">Change my Password</button>
+    </form>
+  </div>
+</div>
+{% endblock %}
