--- a/quizapp/main_app/templates/password_reset_confirm.html
+++ b/quizapp/main_app/templates/password_reset_confirm.html
@@ -58,15 +58,14 @@
       Please Enter Your Password Twice
     </p>
     <form  action="." method="post">
-    {%csrf_token%} 
-    {{form.as_p}}
+      {%csrf_token%} 
       <div>
-        <label for="password">New Password</label>
-        <input id="password" name="password" type="password"   maxlength="254" required />
+        <label for="new_password1">New Password</label>
+        <input  name="new_password1" type="password" id="new_password1"  required />
       </div>
       <div>
-        <label for="password2">Confirm Password</label>
-        <input id="password2" name="password2" type="password"   maxlength="254" required  />
+        <label for="new_password2">Confirm Password</label>
+        <input id="new_password2" name="new_password2" type="password" required  />
       </div>
       
       <button class="pr_btn" type="submit">Change my Password</button>
