--- a/quizapp/main_app/templates/password_reset_done.html
+++ b/quizapp/main_app/templates/password_reset_done.html
@@ -5,7 +5,9 @@
 
   <div class="main">
     <!-- <i class="fa fa-check-circle" aria-hidden="true"></i> -->
-    <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREUPU_AlBjlr2vvJ9OBQoUvfXqGyVw2uSlpQ&usqp=CAU" class="marginauto">
+    <div class="done-icon" style="margin: 0 auto;width: 100%;padding-top: 50px;">
+      <img style="margin: 0 auto;width: 120px;" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREUPU_AlBjlr2vvJ9OBQoUvfXqGyVw2uSlpQ&usqp=CAU" class="marginauto">
+    </div>
     <p class="sign" align="center">Check Your Email. </p>
     
   </div>
