--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -12,51 +12,37 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style4.css' %}">
 </head>
 <body>
-    {% if user.is_authenticated %}
-    <span><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a></span>
-    <span> | </span>
-    <span><a href="{% url 'logout' %}">Logout</a></span>
-    <span> | </span>
-    {% else %}
-    <span><a href="{% url 'login' %}">Login</a></span>
-    <span> | </span>
-    <span><a href="{% url 'signup' %}">SignUp</a></span>
-    {% endif %}
+   
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="">Home Page</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="category/">Categories <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'category' %}">Categories <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="top_five/">Top Five</a>
-      </li>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+        <a class="nav-link" href="{% url 'top_five' %}">Top Five</a>
+      </li>       
+      {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
+        <a class="btn" style="color: white; font-size: 1rem; font-weight: 600;" href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a>
+      </li>       
+      <li class="ml-2 nav-item">
+        <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
+      </li>                         
+      {% else %}
+      <span><a href="{% url 'login' %}">Login</a></span>
+      <span> | </span>
+      <span><a href="{% url 'signup' %}">SignUp</a></span>
+      {% endif %}  
     </ul>
-    <!-- <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
+    
   </div>
 </nav>
 
