--- a/quizapp/main_app/templates/levels.html
+++ b/quizapp/main_app/templates/levels.html
@@ -11,12 +11,12 @@
             <i class="fas fa-brain mr-2"></i>Take Quiz & Challenge Yourself
           </h2>
         </div>
-        <div class="menu_item">
+        <div class="menu_item" style="width: 30%;margin: 0 auto;">
           <div class="row">
-            <a href="question/{{id}}/easy">
+            
             <div
-              class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
-            >
+              class="col-12 justify-content-center align-items-center"
+            ><a href="question/{{id}}/easy">
               <div
                 style="
                   width: 95%;
@@ -28,52 +28,47 @@
               >
               <i class="fas fa-tachometer-alt mr-2"></i>Easy
               </div>
-
+            </a>
             </div>
+            
 
-            </div> 
-          </a>
-            </div>  <div class="row"> 
-
-              <a href="question/{{id}}/medium">
-
-            <div
-              class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
-            >
               <div
-                style="
-                  width: 95%;
-                  font-weight: 600;
-                  border: 1px solid#ddd;
-                  border-radius: 10px;
-                "
-                class="text-center p-5 bg-success text-white"
-              >
-              <i class="fas fa-tachometer-alt mr-2"></i>Medium
-              </div>
-            </div>
-          </a>
-            </div>
-            <div class="row"> 
-              <a href="question/{{id}}/hard" >
-            <div
-              class="col-12 col-sm-4 mx-auto  mb-3 d-flex justify-content-center align-items-center"
-            >
-              <div
-                style="
-                  width: 95%;
-                  font-weight: 600;
-                  border: 1px solid#ddd;
-                  border-radius: 10px;
-                "
-                class="text-center p-5 bg-warning text-white"
-              >
-              <i class="fas fa-tachometer-alt mr-2"></i>Hard
-              </div>
-            </div>
-
+                class="col-12 justify-content-center align-items-center"
+              ><a href="question/{{id}}/medium">
+                <div
+                  style="
+                    width: 95%;
+                    font-weight: 600;
+                    border: 1px solid#ddd;
+                    border-radius: 10px;
+                  "
+                  class="text-center p-5 bg-success text-white"
+                >
+                <i class="fas fa-tachometer-alt mr-2"></i>Medium
+                </div>
               </a>
-
+              </div>
+              
+                <div
+                  class="col-12 justify-content-center align-items-center"
+                >
+                <a href="question/{{id}}/hard" >
+                  <div
+                    style="
+                      width: 95%;
+                      font-weight: 600;
+                      border: 1px solid#ddd;
+                      border-radius: 10px;
+                    "
+                    class="text-center p-5 bg-warning text-white"
+                  >
+                  <i class="fas fa-tachometer-alt mr-2"></i>Hard
+                  </div>
+                </a>
+                </div>
+         
+            </div> 
+          
             </div>
 
           </div>
