--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -22,13 +22,14 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'category' %}">Categories <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/category/">Categories <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'top_five' %}">Top Five</a>
-      </li>       
+        <a class="nav-link" href="/top_five/">Top Five</a>
+      </li>
+  
       {% if user.is_authenticated %}
       <li class="nav-item">
         <a class="btn" style="color: white; font-size: 1rem; font-weight: 600;" href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a>
