--- a/quizapp/main_app/static/style4.css
+++ b/quizapp/main_app/static/style4.css
@@ -116,3 +116,48 @@ a {
         border-radius: 0px;
     }
 }
+.reset_password_c_form_wrapper {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(253, 232, 252);
+  }
+  .reset_password_c_form {
+    width: 400px;
+    height: 250px;
+    border-radius: 20px;
+    margin: 0 auto;
+
+    padding-top: 20px;
+    box-shadow: 5px 5px 10px #ddd;
+    background-color: white;
+    padding: 15px 25px;
+  }
+  .reset_password_c_form input {
+    width: 90%;
+    display: block;
+    border: 1px solid rgb(255, 140, 197);
+    border-radius: 40px;
+    padding: 3px 10px;
+    margin-bottom: 7px;
+    outline: none;
+  }
+  .reset_password_c_form label {
+    margin-bottom: 5px;
+    font-size: 13px;
+  }
+  .reset_password_c_form input:focus {
+    width: 100%;
+    outline: none;
+    transition: all 0.3s ease;
+  }
+  .pr_btn {
+    padding: 6px 10px;
+    outline: none;
+    background: linear-gradient(to right, #9933ff 0%, #ff00ff 100%);
+    border-radius: 40px;
+    border: none;
+    font-weight: 700;
+    margin-top: 10px;
+    color: white;
+    font-size: 14px;
+  }
