--- a/quizapp/main_app/templates/password_reset_confirm.html
+++ b/quizapp/main_app/templates/password_reset_confirm.html
@@ -1,62 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
- <head>
-   <style>
-     .reset_password_c_form_wrapper {
-      width: 100%;
-      height: 100vh;
-      background-color: rgb(253, 232, 252);
-    }
-    .reset_password_c_form {
-      width: 400px;
-      height: 250px;
-      border-radius: 20px;
-      margin: 0 auto;
-
-      padding-top: 20px;
-      box-shadow: 5px 5px 10px #ddd;
-      background-color: white;
-      padding: 15px 25px;
-    }
-    .reset_password_c_form input {
-      width: 90%;
-      display: block;
-      border: 1px solid rgb(255, 140, 197);
-      border-radius: 40px;
-      padding: 3px 10px;
-      margin-bottom: 7px;
-      outline: none;
-    }
-    .reset_password_c_form label {
-      margin-bottom: 5px;
-      font-size: 13px;
-    }
-    .reset_password_c_form input:focus {
-      width: 100%;
-      outline: none;
-      transition: all 0.3s ease;
-    }
-    .pr_btn {
-      padding: 6px 10px;
-      outline: none;
-      background: linear-gradient(to right, #9933ff 0%, #ff00ff 100%);
-      border-radius: 40px;
-      border: none;
-      font-weight: 700;
-      margin-top: 10px;
-      color: white;
-      font-size: 14px;
-    }
-   </style>
- </head>
 <div class="reset_password_c_form_wrapper">
   <div class="p-5"></div>
   <div class="reset_password_c_form">
-    <p
-      style="margin-bottom: 10px; font-weight: 500; color: rgb(245, 82, 245)"
-    >
-      Please Enter Your Password Twice
-    </p>
+    <p style="margin-bottom: 10px; font-weight: 500; color: rgb(245, 82, 245)">Please Enter Your New Password Twice</p>
     <form  action="." method="post">
       {%csrf_token%} 
       <div>
@@ -67,7 +14,6 @@
         <label for="new_password2">Confirm Password</label>
         <input id="new_password2" name="new_password2" type="password" required  />
       </div>
-      
       <button class="pr_btn" type="submit">Change my Password</button>
     </form>
   </div>
