--- a/quizapp/main_app/templates/base.html
+++ b/quizapp/main_app/templates/base.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/category/">Categories <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/top_five/">Top Five</a>
+        <a class="nav-link" href="/category_for_top_five/">Top Five</a>
       </li>
   
       {% if user.is_authenticated %}
